# ros2_kortex

./: .clang-format  .gitignore  .pre-commit-config.yaml  .yamllint  BRANDING_MODIFICATIONS_SUMMARY.md  Dockerfile  Jenkinsfile  LICENSE  README.md  bitbucket-pipelines.yml  clearpath.repos  compose.dev.yml  docker-compose.yml  issue.json  readme.md  rezilient.repos  ros2_kortex-not-released.galactic.repos  ros2_kortex-not-released.humble.repos  ros2_kortex-not-released.jazzy.repos  ros2_kortex-not-released.rolling.repos  ros2_kortex.humble.repos  ros2_kortex.iron.repos  ros2_kortex.jazzy.repos  ros2_kortex.repos  ros2_kortex.rolling.repos  simulation.humble.repos  simulation.jazzy.repos  simulation.repos  simulations.repos
collision_sensor/: CHANGELOG.rst  CMakeLists.txt  README.md  collision_sensor.xml  package.xml
collision_sensor/include/collision_sensor/: collision_sensor.hpp  visibility_control.h
collision_sensor/src/: collision_sensor.cpp  test_from_bag.cpp
collision_sensor/src/contact_detection/: butterworth_low_pass_filter.cpp  contact_detection.cpp  filter_base_class.cpp
kortex2_bringup/: CMakeLists.txt  package.xml
kortex2_bringup/config/: gen3.srdf  kortex_controllers.yaml  servo.yaml  test_huge_joint_space_jump_config.yaml  test_trajectory_goal_publishers_config.yaml
kortex2_bringup/launch/: gen3.launch.py  kortex.launch.py  kortex_control.launch.py  kortex_moveit.launch.py  kortex_sim_control.launch.py  test_huge_joint_space_jump.launch.py  test_joint_trajectory_controller.launch.py
kortex2_bringup/scripts/: test_huge_joint_space_jump.py
kortex2_controllers/: CMakeLists.txt  README.md  controller_plugins.xml  package.xml  twist_controller_plugin.xml
kortex2_controllers/include/kortex2_controllers/: fault_controller.hpp  kortex_command_mode_controller.hpp  twist_controller.hpp  visibility_control.h
kortex2_controllers/src/: fault_controller.cpp  kortex_command_mode_controller.cpp  twist_controller.cpp
kortex2_gripper_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
kortex2_gripper_driver/include/kortex2_gripper_driver/: gripper_hardware_interface.hpp
kortex2_gripper_driver/src/: gripper_hardware_interface.cpp
kortex2_hacks/: CMakeLists.txt  package.xml
kortex2_hacks/include/kortex2_hacks/: twist_to_array_republisher.hpp
kortex2_hacks/src/: twist_to_array_republisher.cpp  twist_to_array_republisher_main.cpp
kortex_api/: CHANGELOG.rst  CMakeLists.txt  package.xml
kortex_api/include/client/: FrameHandler.h  IRouterClient.h  ITransportClient.h  NotificationHandler.h  RouterClient.h  SessionManager.h  TransportClientTcp.h  TransportClientUdp.h  version.h
kortex_api/include/client_stubs/: ActuatorConfigClientRpc.h  ActuatorCyclicClientRpc.h  BaseClientRpc.h  BaseCyclicClientRpc.h  ControlConfigClientRpc.h  DeviceConfigClientRpc.h  DeviceManagerClientRpc.h  GripperCyclicClientRpc.h  InterconnectConfigClientRpc.h  InterconnectCyclicClientRpc.h  SessionClientRpc.h  TestClientRpc.h  VisionConfigClientRpc.h
kortex_api/include/common/: Frame.h  HeaderInfo.h  KBasicException.h  KDetailedException.h  KError.h  KinovaTcpUtilities.h  TransportBridgeDummy.h  version.h
kortex_api/include/messages/: ActuatorConfig.pb.h  ActuatorCyclic.pb.h  Base.pb.h  BaseCyclic.pb.h  Common.pb.h  ControlConfig.pb.h  (+14 more)
kortex_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
kortex_bringup/config/: servo.yaml  test_huge_joint_space_jump_config.yaml  test_trajectory_goal_publishers_config.yaml
kortex_bringup/launch/: 1_kortex_control.launch.py  2_kortex_control.launch.py  gen3.launch.py  gen3_dual.launch.py  gen3_lite.launch.py  kortex_control.launch.py  kortex_sim_control.launch.py  test_huge_joint_space_jump.launch.py  test_joint_trajectory_controller.launch.py  two_arms.launch.py
kortex_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  conanfile.py  hardware_interface_plugin.xml  package.xml  readme.md
kortex_driver/launch/: kortex_driver.launch  kortex_dual_driver.launch
kortex_driver/msg/: JointAngle.msg
kortex_driver/protos/: ActuatorConfig.proto  ActuatorCyclic.proto  Base.proto  BaseCyclic.proto  Common.proto  ControlConfig.proto  DeviceConfig.proto  DeviceManager.proto  Errors.proto  GripperConfig.proto  GripperCyclic.proto  GripperCyclicMessage.proto  InterconnectConfig.proto  InterconnectCyclic.proto  InterconnectCyclicMessage.proto  ProductConfiguration.proto  VisionConfig.proto
kortex_driver/scripts/: ros_kortex_generator.py  source_and_build_workspace.bash
kortex_driver/src/: hardware_interface.cpp  kortex_math_util.cpp
kortex_driver/templates/: proto_converter.cpp.jinja2  proto_converter.h.jinja2  ros_converter.cpp.jinja2  ros_converter.h.jinja2  ros_message.msg.jinja2  ros_oneof.msg.jinja2  services_interface.h.jinja2  services_robot.cpp.jinja2  services_robot.h.jinja2  services_simulation.cpp.jinja2  services_simulation.h.jinja2
kortex_moveit_config/: CMakeLists.txt  package.xml  readme.md
kortex_moveit_config/config/: kortex_controllers.yaml
kortex_moveit_config/gen3_move_it_config/: .setup_assistant  CMakeLists.txt  package.xml
kortex_moveit_config/gen3_robotiq_2f_85_move_it_config/: .setup_assistant
kortex_moveit_config/kinova_gen3_6dof_robotiq_2f_85_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_dual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/: .setup_assistant  CHANGELOG.rst  package.xml
kortex_moveit_config/kinova_gen3_lite_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
kortex_moveit_config/launch/: kortex_moveit.launch.py
kortex_moveit_config/srdf/: gen3_robotiq_2f_85.srdf
kortex_msgs/: CMakeLists.txt  package.xml
kortex_msgs/msg/: ControlMode.msg  ServoingMode.msg
kortex_msgs/srv/: SetMode.srv
kortex_waypoint_controller/: CMakeLists.txt  package.xml
kortex_waypoint_controller/action/: ExecuteJointWaypoints.action
kortex_waypoint_controller/src/: execute_joint_waypoints_server.cpp
(+419 files in other folders)
