<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kortex2_bringup</name>
  <version>0.0.0</version>
  <description>Launch file and run-time configurations, e.g. controllers.</description>

  <author>Marq Rasmussen</author>

  <maintainer email="marq.rasmussen@picknik.ai">Marq Rasmussen</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->
  <exec_depend>moveit_simple_controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
