<?xml version="1.0"?>
<package format="2">
  <name>kortex_api</name>
  <version>0.2.2</version>
  <description>kortex_api</description>

  <maintainer email="marq.rasmussen@picknik.ai">Marq Rasmussen</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
