<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kortex_bringup</name>
  <version>0.2.2</version>
  <description>Launch file and run-time configurations, e.g. controllers.</description>

  <author>Marq Rasmussen</author>

  <maintainer email="marq.rasmussen@picknik.ai">Marq Rasmussen</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>kortex_description</exec_depend>
  <exec_depend>kortex_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
