<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kortex_msgs</name>
  <version>1.0.0</version>
  <description>Messages around the kortex</description>

  <maintainer email="abake48@gmail.com">Anthony Baker</maintainer>

  <license>BSD-3-Clause</license>

  <author email="abake48@gmail.com">Anthony Baker</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
